components/grid/grid.css
.grid {
  display: grid;
  padding: 0.5rem;
  gap: 1rem;
}

.grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.grid-rows-2 {
  grid-template-rows: repeat(2, minmax(0, 1fr));
}

.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
}

.grid-rows-3 {
  grid-template-rows: repeat(3, minmax(0, 1fr));
}

.grid > div {
  background-color: var(--light-green);
  border: 1px solid var(--dark-gray);
  padding: 1rem;
  overflow: none;
}

